Bug Fixes: correct text-align in RTL direction

--- a/src/app/components/table/table.css
+++ b/src/app/components/table/table.css
@@ -251,4 +251,13 @@
         top: 0;
         left: 0;
     }
+
+    /* RTL */
+    .p-datatable.p-table-rtl .p-datatable-thead > tr > th {
+        text-align: right !important;
+    }
+      
+    .p-datatable.p-table-rtl .p-datatable-tbody > tr > td {
+        text-align: right !important;
+    }
 }
